getting the final page to work properly - loading a new joke everytime you go to new drinks, showing all available drinks on final page, resetting directions and instructions with each new drink.

--- a/project1.html
+++ b/project1.html
@@ -95,7 +95,7 @@
         <section>
             <div class="container" id="menu">
                 <h3 class="drink-title"><strong>Pick Your Poison</strong></h3>
-                <ul id="theMakeables"></ul>
+                <ul class="theMakeables"></ul>
 
             </div>
         </section>
@@ -128,7 +128,16 @@
               </ul>
               <h4>Instructions</h4>
               <ul id="instructions"></ul>
+              <div id="goBack">
+                <h4>Changed your mind?  Heres what else you can make!</h4>
+                <ul class="theMakeables">
+
+                </ul>
+                
+              </div>
             </div>
+            
+
           </div>
         </div>
       </section>
