Addition of styling for better responsiveness

--- a/project1.html
+++ b/project1.html
@@ -45,25 +45,27 @@
         <div class="has-text-centered">
           <button type="submit" class="button" id="enterButton">ENTER </button>
         </div>
-        <div class="modal no-date">
-          <div class="modal-background">
-            <div class="modal-content is-hidden date-alert">
-              <h1>BIRTH DATE MUST BE ENTERED</h1>
-            </div>
-          </div>
-          <button class="modal-close is-large" aria-label="close"></button>
-        </div>
-        <div class="modal age-modal">
-          <div class="modal-background">
-            <div class="modal-content is-hidden age-alert">
-              <h1>SORRY MUST BE 21 TO ENTER SITE</h1>
-            </div>
-          </div>
-          <button class="modal-close is-large" aria-label="close"></button>
-        </div>
       </div>
     </div>
+    <div class="modal no-date">
+      <div class="modal-background">
+        <div class="modal-content is-hidden date-alert">
+          <h1 class="alert">BIRTH DATE MUST BE ENTERED</h1>
+        </div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
     </div>
+    <div class="modal age-modal">
+      <div class="modal-background">
+        <div class="modal-content is-hidden age-alert">
+          <h1 class="alert">SORRY MUST BE 21 TO ENTER SITE</h1>
+        </div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+
+
+
   </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2nd page user picks options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <section class="hero is-fullheight image2 is-hidden" id="image2">
@@ -77,25 +79,25 @@
     </div>
     <div class="block">
       <div class="columns">
-        <div class="column is-3">
+        <div class="column is-4">
           <div class="container" id="options1">
             <div class="control" id="liquor-list">
 
             </div>
           </div>
         </div>
-        <div class="column is-3">
+        <div class="column is-2">
           <figure>
             <button class="liquor"><img class="img1" src="assests/cropped_bottle.jpg" alt="Liquor Bottle"></button>
           </figure>
         </div>
-        <div class="column is-3">
+        <div class="column is-2">
           <figure>
             <button class="mixer"><img class="img2" src="assests/mixer_bottle.jpg" alt="Mixer Bottle" /></button>
           </figure>
 
         </div>
-        <div class="column is-3">
+        <div class="column is-4">
           <div class="container" id="options2">
             <div class="control" id="mixer-list">
 
