trial renaming of files

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
   </section>
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
-  <script src="script4E.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
