making a bit more responsive

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <ul class="theMakeables">
           <div id="noDrink">
             <p>Sorry, we don't know of any drinks that can be made with what you've got...</p><iframe
-              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" width="480" height="360" frameBorder="0"
+              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" frameBorder="0"
               class="giphy-embed" allowFullScreen></iframe>
             <p><a href="https://giphy.com/gifs/red-fang-3oz8xrecHJXx85kgKI">via GIPHY</a></p>
           </div>
