Addition of popover to liquor and mixer bottles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="modal no-date">
       <div class="modal-background">
         <div class="modal-content is-hidden date-alert">
-          <h1 class="alert">BIRTH DATE MUST BE ENTERED</h1>
+          <h1 class="alert">DATE OF BIRTH MUST BE ENTERED</h1>
         </div>
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
@@ -122,7 +122,7 @@
         <ul class="theMakeables">
           <div id="noDrink">
             <p>Sorry, we don't know of any drinks that can be made with what you've got...</p><iframe
-              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" frameBorder="0"
+              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" width="480" height="360" frameBorder="0"
               class="giphy-embed" allowFullScreen></iframe>
             <p><a href="https://giphy.com/gifs/red-fang-3oz8xrecHJXx85kgKI">via GIPHY</a></p>
           </div>
@@ -172,7 +172,6 @@
       </div>
     </div>
   </section>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="script.js"></script>
 </body>
 
