trying to get that damn booze box to work

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         </div>
       </div>
       <p class="has-text-centered">background by yingyang</p>
+    </div>
   </section>
   <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~3rd page display drink options~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <section class="hero is-fullheight solid is-hidden" id="solid">
