adding an id for final drink pic

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="tile is-ancestor">
       <div class="tile is-4 is-vertical is-parent">
         <div class="tile is-child box has-background-dark">
-          <figure>
+          <figure id="finalDrink">
             <img id="drink-img" alt="drink image">
           </figure>
 
